--- a/index.html
+++ b/index.html
@@ -6,29 +6,21 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Inter:wght@400;700&display=swap" rel="stylesheet">
 <style>
-body { @apply bg-gray-900 text-zinc-200 font-inter; }
-h1 { @apply text-orange-400 text-3xl font-roboto-condensed mb-4; }
-label { @apply block mb-2 font-roboto-condensed; }
-input { @apply w-full text-gray-900 p-2 rounded-md mb-4; }
-.btn { @apply px-4 py-2 rounded-md font-bold transition-colors duration-150; }
-.btn-primary { @apply bg-orange-600 text-white hover:bg-orange-700; }
-.btn-secondary { @apply bg-blue-600 text-white hover:bg-blue-700; }
-.section { @apply my-4 p-4 bg-gray-800 rounded-lg border border-gray-700; }
-pre { white-space: pre-wrap; word-wrap: break-word; }
+.font-roboto-condensed { font-family: 'Roboto Condensed', sans-serif; }
+.font-inter { font-family: 'Inter', sans-serif; }
 </style>
 </head>
-<body>
-<div class="container mx-auto p-4">
-<h1>Medical Literature Summarizer</h1>
-<label for="topic">Enter your medical question or topic:</label>
-<input type="text" id="topic" class="rounded-md p-2 w-full text-gray-900">
-<button id="submit" class="btn btn-primary mb-4">Submit</button>
-
-<div id="questionArea" class="section hidden"></div>
-<div id="summaryArea" class="section hidden"></div>
+<body class="bg-gray-900 text-zinc-200 font-inter min-h-screen">
+<div class="max-w-3xl mx-auto p-4">
+<h1 class="text-orange-400 text-3xl font-roboto-condensed mb-4">Medical Literature Summarizer</h1>
+<label for="topic" class="block mb-2 font-roboto-condensed">Enter your medical question or topic:</label>
+<input type="text" id="topic" class="w-full text-gray-900 p-2 rounded-md mb-4">
+<button id="submit" class="px-4 py-2 rounded-md font-bold bg-orange-600 text-white hover:bg-orange-700 mb-4">Submit</button>
+<div id="questionArea" class="my-4 p-4 bg-gray-800 rounded-lg border border-gray-700 hidden"></div>
+<div id="summaryArea" class="my-4 p-4 bg-gray-800 rounded-lg border border-gray-700 hidden"></div>
 <div id="buttonsArea" class="mt-4 space-x-2 hidden">
-<button id="audioDownload" class="btn btn-secondary">Download Lecture Audio</button>
-<button id="keyDownload" class="btn btn-secondary">Download Key Points</button>
+<button id="audioDownload" class="px-4 py-2 rounded-md font-bold bg-blue-600 text-white hover:bg-blue-700">Download Lecture Audio</button>
+<button id="keyDownload" class="px-4 py-2 rounded-md font-bold bg-blue-600 text-white hover:bg-blue-700">Download Key Points</button>
 </div>
 </div>
 <script>
@@ -93,7 +85,7 @@ async function generateAudio(text) {
 
 document.getElementById('submit').onclick = async () => {
   const topic = document.getElementById('topic').value.trim();
-  if(!topic) return;
+  if (!topic) return;
   const questionArea = document.getElementById('questionArea');
   const summaryArea = document.getElementById('summaryArea');
   const buttonsArea = document.getElementById('buttonsArea');
