--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
     <div class="container">
         <header>
-            <h1>Medical Journal Club</h1>
+            <h1>Evidence-to-Action</h1>
         </header>
         
         <p class="disclaimer">
